# beacondbg

./: .gitmodules  CMakeLists.txt  README.md  beacondbg.sln  vcpkg.json
.github/ISSUE_TEMPLATE/: Bug_Report.yml  Feature_Request.yml  config.yml
beacon/: DllMain.cpp  beacon.vcxproj  beacon.vcxproj.filters  beacon_layer.cpp  export.def  loader.c  loader.h  tbd.h
bofpack/: bof_pack.cpp  bof_pack.h  bofpack.vcxproj  bofpack.vcxproj.filters  main.cpp
cli/: CMakeLists.txt  breakpoints.cpp  breakpoints.h  cli.cpp  cli.vcxproj  cli.vcxproj.filters  clicmd.cpp  clicmd.h  load.cpp  load.h  quit.cpp  quit.h  run.cpp  run.h
coff/: CMakeLists.txt  coff.vcxproj  coff.vcxproj.filters  loader.c  loader.h
include/: beacon.h  beacondbg.h  cli.h  config.h  include.vcxitems  include.vcxitems.filters
src/: beacon_data.h  beacon_layer.cpp  beacondbg.cpp  beacondbg.vcxproj  beacondbg.vcxproj.filters  disassemble.cpp  main.cpp
src/cli/: args.cpp  args.h  breakpoints.cpp  breakpoints.h  cli.cpp  clicmd.cpp  clicmd.h  disasm.cpp  disasm.h  load.cpp  load.h  quit.cpp  quit.h  run.cpp  run.h  sym.cpp  sym.h
tests/: printf.c  tests.vcxproj  tests.vcxproj.filters
